# Google_Agents

./: .gitignore  env.sample  main.py  pyproject.toml  requirements.txt
0-multi_tool_agent/weather_agent/: agent.py
1-basic-agent/: agent.py
1-basic-agent/greeting_agent/: agent.py
2-tool-agent/tool_agent/: agent.py
3-litellm-agent/dad_joke_agent/: agent.py
4-structured-outputs/email-generator/: agent.py
5-sessions-and-state/: README.md  basic_stateful_session.py
5-sessions-and-state/question_answering_agent/: agent.py
6-persistent-storage/: README.md  main.py  utils.py
6-persistent-storage/memory_agent/: agent.py
7-multi-agent/: README.md
7-multi-agent/manager/: agent.py
7-multi-agent/manager/sub_agents/funny_nerd/: agent.py
7-multi-agent/manager/sub_agents/news_analyst/: agent.py
7-multi-agent/manager/sub_agents/stock_analyst/: agent.py
7-multi-agent/manager/tools/: tools.py
